--- a/Signal/translations/ar.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ar.lproj/PluralAware.stringsdict
@@ -728,17 +728,65 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>zero</key>
-			<string>%1$d عضو بالمجموعة له اسم متشابه.</string>
+			<string>%1$d group members have the same name.</string>
 			<key>one</key>
-			<string>%1$d عضو بالمجموعة له اسم متشابه.</string>
+			<string>%1$d group member has the same name.</string>
 			<key>two</key>
-			<string>%1$d عضوان بالمجموعة لهما اسم متشابه.</string>
+			<string>%1$d group members have the same name.</string>
 			<key>few</key>
-			<string>%1$d أعضاء بالمجموعة لهم اسم متشابه.</string>
+			<string>%1$d group members have the same name.</string>
 			<key>many</key>
-			<string>%1$d عضوًا بالمجموعة لهم اسم متشابه.</string>
+			<string>%1$d group members have the same name.</string>
 			<key>other</key>
-			<string>%1$d عضوٍ بالمجموعة لهم اسم متشابه.</string>
+			<string>%1$d group members have the same name.</string>
+		</dict>
+	</dict>
+	<key>GROUP_MEMBERSHIP_MULTIPLE_COLLISIONS_BANNER_TITLE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>zero</key>
+			<string>%1$d name conflicts were found in this group.</string>
+			<key>one</key>
+			<string>%1$d name conflict was found in this group.</string>
+			<key>two</key>
+			<string>%1$d name conflicts were found in this group.</string>
+			<key>few</key>
+			<string>%1$d name conflicts were found in this group.</string>
+			<key>many</key>
+			<string>%1$d name conflicts were found in this group.</string>
+			<key>other</key>
+			<string>%1$d name conflicts were found in this group.</string>
+		</dict>
+	</dict>
+	<key>GROUP_MEMBERSHIP_NAME_COLLISION_MEMBER_COUNT_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>zero</key>
+			<string>%1$d Members</string>
+			<key>one</key>
+			<string>%1$d Member</string>
+			<key>two</key>
+			<string>%1$d Members</string>
+			<key>few</key>
+			<string>%1$d Members</string>
+			<key>many</key>
+			<string>%1$d Members</string>
+			<key>other</key>
+			<string>%1$d Members</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBERSHIP_NAME_MULTIPLE_COLLISION_HEADER_%d</key>
@@ -752,17 +800,17 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>zero</key>
-			<string>%1$d عضو بالمجموعة له اسم متشابه، يُرجى مراجعة الأعضاء أسفله أو اتخاذ إجراء.</string>
+			<string>%1$d name conflicts were found in this group. Review the members below or choose to take action.</string>
 			<key>one</key>
-			<string>%1$d عضو بالمجموعة له اسم متشابه، يُرجى مراجعة الأعضاء أسفله أو اتخاذ إجراء.</string>
+			<string>%1$d name conflict was found in this group. Review the members below or choose to take action.</string>
 			<key>two</key>
-			<string>%1$d عضوان بالمجموعة لهما أسماء متشابهة، يُرجى مراجعة الأعضاء أسفله أو اتخاذ إجراء.</string>
+			<string>%1$d name conflicts were found in this group. Review the members below or choose to take action.</string>
 			<key>few</key>
-			<string>%1$d أعضاء بالمجموعة لهم أسماء متشابهة، يُرجى مراجعة الأعضاء أسفله أو اتخاذ إجراء.</string>
+			<string>%1$d name conflicts were found in this group. Review the members below or choose to take action.</string>
 			<key>many</key>
-			<string>%1$d عضوًا بالمجموعة لهم أسماء متشابهة، يُرجى مراجعة الأعضاء أسفله أو اتخاذ إجراء.</string>
+			<string>%1$d name conflicts were found in this group. Review the members below or choose to take action.</string>
 			<key>other</key>
-			<string>%1$d عضوٍ بالمجموعة لهم أسماء متشابهة، يُرجى مراجعة الأعضاء أسفله أو اتخاذ إجراء.</string>
+			<string>%1$d name conflicts were found in this group. Review the members below or choose to take action.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBERSHIP_NAME_SINGLE_COLLISION_HEADER_%d</key>
@@ -776,17 +824,17 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>zero</key>
-			<string>%1$d عضو بالمجموعة له اسم متشابه، يُرجى مراجعة الأعضاء أسفله أو اتخاذ إجراء.</string>
+			<string>%1$d group members have the same name. Review the members below or choose to take action.</string>
 			<key>one</key>
-			<string>%1$d عضو بالمجموعة له نفس الاسم، يُرجى مراجعة الأعضاء أسفله أو اتخاذ إجراء.</string>
+			<string>%1$d group member has the same name. Review the member below or choose to take action.</string>
 			<key>two</key>
-			<string>%1$d عضوان بالمجموعة لهما نفس الاسم، يُرجى مراجعة الأعضاء أسفله أو اتخاذ إجراء.</string>
+			<string>%1$d group members have the same name. Review the members below or choose to take action.</string>
 			<key>few</key>
-			<string>%1$d أعضاء بالمجموعة لهم نفس الاسم، يُرجى مراجعة الأعضاء أسفله أو اتخاذ إجراء.</string>
+			<string>%1$d group members have the same name. Review the members below or choose to take action.</string>
 			<key>many</key>
-			<string>%1$d عضوًا بالمجموعة لهم نفس الاسم، يُرجى مراجعة الأعضاء أسفله أو اتخاذ إجراء.</string>
+			<string>%1$d group members have the same name. Review the members below or choose to take action.</string>
 			<key>other</key>
-			<string>%1$d عضو بالمجموعة لهم نفس الاسم، يُرجى مراجعة الأعضاء أسفله أو اتخاذ إجراء.</string>
+			<string>%1$d group members have the same name. Review the members below or choose to take action.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBER_COUNT_LABEL_%d</key>
