--- a/Signal/translations/da.lproj/PluralAware.stringsdict
+++ b/Signal/translations/da.lproj/PluralAware.stringsdict
@@ -488,9 +488,41 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$d gruppemedlem har et lignende navn.</string>
+			<string>%1$d group member has the same name.</string>
 			<key>other</key>
-			<string>%1$d gruppemedlemmer har lignende navne.</string>
+			<string>%1$d group members have the same name.</string>
+		</dict>
+	</dict>
+	<key>GROUP_MEMBERSHIP_MULTIPLE_COLLISIONS_BANNER_TITLE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$d name conflict was found in this group.</string>
+			<key>other</key>
+			<string>%1$d name conflicts were found in this group.</string>
+		</dict>
+	</dict>
+	<key>GROUP_MEMBERSHIP_NAME_COLLISION_MEMBER_COUNT_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$d Member</string>
+			<key>other</key>
+			<string>%1$d Members</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBERSHIP_NAME_MULTIPLE_COLLISION_HEADER_%d</key>
@@ -504,9 +536,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$d gruppemedlem har et lignende navn, find medlemmet nedenfor eller vælg at gøre noget.</string>
+			<string>%1$d name conflict was found in this group. Review the members below or choose to take action.</string>
 			<key>other</key>
-			<string>%1$d gruppemedlemmer har lignende navne, find medlemmerne nedenfor eller vælg at gøre noget.</string>
+			<string>%1$d name conflicts were found in this group. Review the members below or choose to take action.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBERSHIP_NAME_SINGLE_COLLISION_HEADER_%d</key>
@@ -520,9 +552,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$d gruppemedlem har det samme navn, find medlemmet nedenfor eller vælg at gøre noget.</string>
+			<string>%1$d group member has the same name. Review the member below or choose to take action.</string>
 			<key>other</key>
-			<string>%1$d gruppemedlemmer har det samme navn, find medlemmerne nedenfor eller vælg at gøre noget.</string>
+			<string>%1$d group members have the same name. Review the members below or choose to take action.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBER_COUNT_LABEL_%d</key>
@@ -906,7 +938,7 @@
 			<key>one</key>
 			<string>Alle Signal-kontakter · %1$d seer</string>
 			<key>other</key>
-			<string>Alle Signal-kontaker · %1$d seere</string>
+			<string>Alle Signal-kontakter · %1$d seere</string>
 		</dict>
 	</dict>
 	<key>MY_STORY_VIEWERS_ALL_CONNECTIONS_EXCLUDING_%d</key>
@@ -920,9 +952,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Alle Signal-kontaker · %1$d ekskluderet</string>
+			<string>Alle Signal-kontakter · %1$d ekskluderet</string>
 			<key>other</key>
-			<string>Alle Signal-kontaker · %1$d ekskluderet</string>
+			<string>Alle Signal-kontakter · %1$d ekskluderet</string>
 		</dict>
 	</dict>
 	<key>MY_STORY_VIEWERS_ONLY_%d</key>
