--- a/Signal/translations/he.lproj/PluralAware.stringsdict
+++ b/Signal/translations/he.lproj/PluralAware.stringsdict
@@ -608,13 +608,53 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>לחבר/ת קבוצה %1$d יש שם דומה.</string>
+			<string>%1$d group member has the same name.</string>
 			<key>two</key>
-			<string>ל–%1$d חברי קבוצה יש שמות דומים.</string>
+			<string>%1$d group members have the same name.</string>
 			<key>many</key>
-			<string>ל–%1$d חברי קבוצה יש שמות דומים.</string>
+			<string>%1$d group members have the same name.</string>
 			<key>other</key>
-			<string>ל–%1$d חברי קבוצה יש שמות דומים.</string>
+			<string>%1$d group members have the same name.</string>
+		</dict>
+	</dict>
+	<key>GROUP_MEMBERSHIP_MULTIPLE_COLLISIONS_BANNER_TITLE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$d name conflict was found in this group.</string>
+			<key>two</key>
+			<string>%1$d name conflicts were found in this group.</string>
+			<key>many</key>
+			<string>%1$d name conflicts were found in this group.</string>
+			<key>other</key>
+			<string>%1$d name conflicts were found in this group.</string>
+		</dict>
+	</dict>
+	<key>GROUP_MEMBERSHIP_NAME_COLLISION_MEMBER_COUNT_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$d Member</string>
+			<key>two</key>
+			<string>%1$d Members</string>
+			<key>many</key>
+			<string>%1$d Members</string>
+			<key>other</key>
+			<string>%1$d Members</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBERSHIP_NAME_MULTIPLE_COLLISION_HEADER_%d</key>
@@ -628,13 +668,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>לחבר/ת קבוצה %1$d יש שם דומה, אפשר לסקור את החבר/ה למטה או לבחור לנקוט בפעולה.</string>
+			<string>%1$d name conflict was found in this group. Review the members below or choose to take action.</string>
 			<key>two</key>
-			<string>ל–%1$d חברי קבוצה יש שם דומה, אפשר לסקור את החברים למטה או לבחור לנקוט בפעולה.</string>
+			<string>%1$d name conflicts were found in this group. Review the members below or choose to take action.</string>
 			<key>many</key>
-			<string>ל–%1$d חברי קבוצה יש שם דומה, אפשר לסקור את החברים למטה או לבחור לנקוט בפעולה.</string>
+			<string>%1$d name conflicts were found in this group. Review the members below or choose to take action.</string>
 			<key>other</key>
-			<string>ל–%1$d חברי קבוצה יש שם דומה, אפשר לסקור את החברים למטה או לבחור לנקוט בפעולה.</string>
+			<string>%1$d name conflicts were found in this group. Review the members below or choose to take action.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBERSHIP_NAME_SINGLE_COLLISION_HEADER_%d</key>
@@ -648,13 +688,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>לחבר/ת קבוצה %1$d יש שם זהה, אפשר לסקור את החבר/ה למטה או לבחור לנקוט בפעולה.</string>
+			<string>%1$d group member has the same name. Review the member below or choose to take action.</string>
 			<key>two</key>
-			<string>ל–%1$d חברי קבוצה יש שם זהה, אפשר לסקור את החברים למטה או לבחור לנקוט בפעולה.</string>
+			<string>%1$d group members have the same name. Review the members below or choose to take action.</string>
 			<key>many</key>
-			<string>ל–%1$d חברי קבוצה יש שם זהה, אפשר לסקור את החברים למטה או לבחור לנקוט בפעולה.</string>
+			<string>%1$d group members have the same name. Review the members below or choose to take action.</string>
 			<key>other</key>
-			<string>ל–%1$d חברי קבוצה יש שם זהה, אפשר לסקור את החברים למטה או לבחור לנקוט בפעולה.</string>
+			<string>%1$d group members have the same name. Review the members below or choose to take action.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBER_COUNT_LABEL_%d</key>
