--- a/Signal/translations/hr.lproj/PluralAware.stringsdict
+++ b/Signal/translations/hr.lproj/PluralAware.stringsdict
@@ -608,13 +608,53 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$d član grupe ima slično ime.</string>
+			<string>%1$d group member has the same name.</string>
 			<key>few</key>
-			<string>%1$d člana grupe imaju slična imena.</string>
+			<string>%1$d group members have the same name.</string>
 			<key>many</key>
-			<string>%1$d članova grupe imaju slična imena.</string>
+			<string>%1$d group members have the same name.</string>
 			<key>other</key>
-			<string>%1$d članova grupe ima slična imena.</string>
+			<string>%1$d group members have the same name.</string>
+		</dict>
+	</dict>
+	<key>GROUP_MEMBERSHIP_MULTIPLE_COLLISIONS_BANNER_TITLE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$d name conflict was found in this group.</string>
+			<key>few</key>
+			<string>%1$d name conflicts were found in this group.</string>
+			<key>many</key>
+			<string>%1$d name conflicts were found in this group.</string>
+			<key>other</key>
+			<string>%1$d name conflicts were found in this group.</string>
+		</dict>
+	</dict>
+	<key>GROUP_MEMBERSHIP_NAME_COLLISION_MEMBER_COUNT_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$d Member</string>
+			<key>few</key>
+			<string>%1$d Members</string>
+			<key>many</key>
+			<string>%1$d Members</string>
+			<key>other</key>
+			<string>%1$d Members</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBERSHIP_NAME_MULTIPLE_COLLISION_HEADER_%d</key>
@@ -628,13 +668,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$d član grupe ima slično ime. Pregledajte člana u nastavku i odaberite koju radnju poduzeti.</string>
+			<string>%1$d name conflict was found in this group. Review the members below or choose to take action.</string>
 			<key>few</key>
-			<string>%1$d člana grupe imaju slična imena. Pregledajte članove u nastavku i odaberite koju radnju poduzeti.</string>
+			<string>%1$d name conflicts were found in this group. Review the members below or choose to take action.</string>
 			<key>many</key>
-			<string>%1$d članova grupe imaju slična imena. Pregledajte članove u nastavku i odaberite koju radnju poduzeti.</string>
+			<string>%1$d name conflicts were found in this group. Review the members below or choose to take action.</string>
 			<key>other</key>
-			<string>%1$d članova grupe imaju slična imena. Pregledajte članove u nastavku i odaberite koju radnju poduzeti.</string>
+			<string>%1$d name conflicts were found in this group. Review the members below or choose to take action.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBERSHIP_NAME_SINGLE_COLLISION_HEADER_%d</key>
@@ -648,13 +688,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$d član grupe ima isto ime, pregledajte člana u nastavku i odaberite koju radnju poduzeti.</string>
+			<string>%1$d group member has the same name. Review the member below or choose to take action.</string>
 			<key>few</key>
-			<string>%1$d člana grupe imaju isto ime, pregledajte članove u nastavku i odaberite koju radnju poduzeti.</string>
+			<string>%1$d group members have the same name. Review the members below or choose to take action.</string>
 			<key>many</key>
-			<string>%1$d članova grupe ima isto ime, pregledajte članove u nastavku i odaberite koju radnju poduzeti.</string>
+			<string>%1$d group members have the same name. Review the members below or choose to take action.</string>
 			<key>other</key>
-			<string>%1$d članova grupe ima isto ime, pregledajte članove u nastavku i odaberite koju radnju poduzeti.</string>
+			<string>%1$d group members have the same name. Review the members below or choose to take action.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBER_COUNT_LABEL_%d</key>
